# faircom-mcp

./: .gitignore  BUILD.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: development.md  operations-runbook.md  project-structure.md  release-notes-template.md  support-matrix.md  testing.md
packaging/deb/: README.md  control  postinst  postrm  prerm
packaging/logrotate/: faircom-mcp
packaging/rpm/: README.md  faircom-mcp.spec
packaging/systemd/: faircom-mcp.env.example  faircom-mcp.service
packaging/sysusers.d/: faircom-mcp.conf
packaging/tmpfiles.d/: faircom-mcp.conf
scripts/: build_linux_packages.sh  generate_release_integrity.sh  test_with_edge.sh  tmp_seed_and_test_erp_mcp.sh  validate_linux_packages.sh
src/faircom_mcp/: __main__.py  config.py  errors.py  logging_utils.py  observability.py  server.py
src/faircom_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/faircom_mcp/api/: __init__.py  client.py  sql.py  tables.py
src/faircom_mcp/security/: __init__.py
src/faircom_mcp/transports/: health.py
tests/integration/: test_edge_container_smoke.py  test_smoke.py
tests/unit/: test_api_adapters.py  test_api_client.py  test_config.py  test_errors.py  test_health.py  test_imports.py  test_logging_utils.py  test_security.py  test_server_bootstrap.py
