[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faircom-mcp"
version = "0.1.0"
description = "Production-grade MCP server for FairCom JSON API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FairCom" }]
dependencies = [
  "fastmcp>=2.10.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn>=0.30.0"
]

[project.scripts]
faircom-mcp-server = "faircom_mcp.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-python-dateutil>=2.9.0.20240316"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q --cov=src/faircom_mcp --cov-report=term-missing"
testpaths = ["tests"]
markers = [
  "integration: marks integration tests",
  "edge_integration: marks tests requiring a running FairCom Edge backend",
]
